tests/13-multiple-attrs.stderr
error: multiple definitions of `default` found
 --> $DIR/13-multiple-attrs.rs:6:5
  |
6 |     #[default(value = "100")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
